Rota validação certificado ser pública
