# storage/api-docs/api-docs.json
@@ -397,12 +397,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             }
         },
         "/api/inscricoes": {
